--- a/aremac/aremac/stylesheet.css
+++ b/aremac/aremac/stylesheet.css
@@ -66,6 +66,11 @@ footer {
     font-family:"Trebuchet MS", Helvetica, sans-serif;
 }
 
+h2 {
+    font-family:"Trebuchet MS", Helvetica, sans-serif;
+    text-align: center;
+}
+
 fieldset {
 	border: none;
 }
