--- a/aremac/aremac/aremac.Master
+++ b/aremac/aremac/aremac.Master
@@ -2,10 +2,10 @@
 
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head runat="server">
 
-    <link href="../stylesheet.css" rel="stylesheet" />
+    <link href="stylesheet.css" rel="stylesheet" />
     <title>aremac.</title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -34,6 +34,20 @@
     </form>
 
 
-    <footer>© 2017 | aremac.</footer>
+    <footer>
+        
+        © 2017 | aremac.
+        
+        <br />
+
+        <p>
+
+            <a href="http://validator.w3.org/check?uri=referer">Validate HTML</a> |
+            <a href="http://jigsaw.w3.org/css-validator/check/referer">Validate CSS</a>
+
+        </p>
+
+
+    </footer>
 </body>
 </html>
