--- a/aremac/aremac/stylesheet.css
+++ b/aremac/aremac/stylesheet.css
@@ -146,7 +146,7 @@ input[type=submit]:hover {
     display:inline-block;
     margin-top: 35px; 
     margin-bottom: 35px;
-    font-family:"Trebuchet MS", Helvetica, sans-serif;s
+    font-family:"Trebuchet MS", Helvetica, sans-serif;
 }
 
 .pic2 {
