Eighth commit - map on contact.aspx

--- a/aremac/aremac/aremac.Master
+++ b/aremac/aremac/aremac.Master
@@ -21,7 +21,7 @@
         <nav><ul>
             <li><a href="default.aspx">Home</a></li>
             <li><a href="#">Products</a></li>
-            <li><a href="#">Login</a></li>
+            <li><a href="login.aspx">Login</a></li>
             <li><a href="#">Account</a></li>
             <li><a href="contact.aspx">Contact Us</a></li>
             <li><a href="#">Payment</a></li>
